--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,5 +8,5 @@ metadata:
   #   backstage.io/techdocs-ref: dir:.
 spec:
   type: service
-  owner: liuzhiyong_1982@kubecanops.win
+  owner: user:liuzhiyong.1982@kubecanops.win
   lifecycle: experimental
